fix header z-index

--- a/client/components/header/header.pcss
+++ b/client/components/header/header.pcss
@@ -5,7 +5,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 10;
+  z-index: 150;
 
   .wrapper{
     width: 100%;
